--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
-        tools:layout="@layout/support_simple_spinner_dropdown_item"
+    <ListView
+        android:id="@+id/ListView"
+        android:dividerHeight="5dp"
+        android:smoothScrollbar="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
