--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     <ListView
         android:id="@+id/ListView"
         android:dividerHeight="5dp"
+        android:smoothScrollbar="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
